--- a/testlatex.tex
+++ b/testlatex.tex
@@ -48,19 +48,11 @@ Figure of Problem 1.
   \label{fig:figlabel}
 \end{figure}
 
-\begin{thebibliography}
-\bibitem{[1]} Biehl, AR (2002), \textquotedblleft The Extent of the Market for
-Retail Banking Deposits,\textquotedblright\ \textit{The Antitrust Bulletin},
-Spring:91-106.
+\section{References}
+\noindent Dawkins, Paul (2003), \textit{Paul's Online Math Notes}
+\url {http://tutorial.math.lamar.edu/Classes/CalcI/DefnOfDerivative.aspx}
 
+\noindent Fouss, Kristen, \textit{Honors Precalc Resources}, \url{http://image.tutorvista.com/content/feed/u1989/limits and derivates.JPG}
 
-\bibitem{[2]} Brynjolfson, Erik and Chris Kemerer (1996), \textquotedblleft
-Network Externalities in Microcomputer Software: An Econometric Analysis of
-the Spreadsheet Market,\textquotedblright\ \textit{Management Science}, Vol.
-42, iss.12, pp. 1627-47.
-
-\end{thebibliography}
- 
-% Repeat as needed
  
 \end{document}
